2008-12-10  David Engster  <dengste@eml.cc>

	* sb-atom.el (shimbun-atom-get-headers): Use the first link if the atom
	feed don't have an "alternate" link element.

	* sb-atom-hash.el (shimbun-hash-update-items-impl): Deal with feeds who
	just publish a summary, in addition to feeds with published content.

2008-12-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-servers-list): Don't exclude rss-hash and
	atom-hash.

2008-11-28  David Engster  <dengste@eml.cc>

	* sb-rss-blogs.el: New file.

2008-11-27  David Engster  <dengste@eml.cc>

	* shimbun.el (shimbun-use-local, shimbun-local-path): New variables.
	(shimbun-retrieve-url): Support offline retrieving of indices.

	* nnshimbun.el (nnshimbun-generate-download-script): New command.

2008-11-11  Naohiro Aota  <nao.aota@gmail.com>

	* sb-aljazeera.el (shimbun-aljazeera-url)
	(shimbun-aljazeera-path-alist): Update to follow changes.

2008-11-10  David Engster  <dengste@eml.cc>

	* sb-slashdot.el (shimbun-slashdot-regexp-section-id-subject)
	(shimbun-slashdot-regexp-comment-system): Updated regexps.

2008-11-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-clear-contents): Add another regexp to
	look for the content start.

2008-10-23  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* sb-rss.el (shimbun-rss-get-headers): Don't check `ignored-subject'
	when subject is empty.

2008-10-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-clear-contents): Remove contents other than the
	ones written by the Prime Minister.

2008-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-kantei-x-face-alist): Update.
	(shimbun-clear-contents): Remove style sheet, navigation button, and
	table tags; shrink boundary lines; convert zenkaku ASCII to hankaku.

2008-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-get-headers-for-today): Fix regexp.

2008-09-26  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
