@@ -1,3 +1,8 @@
+2008-12-16  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sb-itmedia.el (shimbun-itmedia-content-start): Don't exclude author's
+	face icon.
+
 2008-12-10  David Engster  <dengste@eml.cc>
 
 	* sb-atom.el (shimbun-atom-get-headers): Use the first link if the atom
